# python-dev

./: .gitignore  Dockerfile  README.md  build.ps1  docker-compose.yml  pyproject.toml  python_requirements_pinned_hashless.txt  python_requirements_unpinned.txt
fastapi-starter/: LICENSE  README.md  alembic.ini  pyproject.toml
fastapi-starter/alembic/: env.py
fastapi-starter/alembic/versions/: 2025-09-10_01a5db130b68_add_resources_model.py
fastapi-starter/src/: main.py
fastapi-starter/src/api/routes/: resources.py
fastapi-starter/src/api/schemas/: resource.py
fastapi-starter/src/config/: .env.example  settings.py
fastapi-starter/src/infrastructure/db/: database.py
fastapi-starter/src/infrastructure/db/models/: resource.py
fastapi-starter/tests/: conftest.py
fastapi-starter/tests/api/: test_resources.py
new/: pyproject.toml
template/: .gitignore  alembic.ini  pyproject-old.toml  pyproject.toml
test/: pyproject.toml  requirements.txt
