[project]
name = "backend"
version = "0.1.0"
description = "Backend"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "alembic>=1.16.5",
    "attrs>=25.4.0",
    "authlib>=1.6.5",
    "black>=25.9.0",
    "celery>=5.5.3",
    "cryptography>=46.0.2",
    "django>=5.2.7",
    "django-dotenv>=1.4.2",
    "djangorestframework>=3.16.1",
    "dramatiq>=1.18.0",
    "eventsourcing>=9.4.6",
    "faker>=37.11.0",
    "fastapi>=0.118.3",
    "fastapi-users>=14.0.1",
    "flask>=3.1.2",
    "httpx>=0.28.1",
    "joblib>=1.5.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "mypy>=1.16.1",
    "mypy-extensions>=1.1.0",
    "numpy>=2.3.3",
    "orjson>=3.11.3",
    "pandas>=2.3.3",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=11.3.0",
    "plotly>=6.3.1",
    "polars>=1.34.0",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.2.10",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.2.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "ruff>=0.12.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "simpy>=4.1.1",
    "sqlalchemy>=2.0.43",
    "statsmodels>=0.14.5",
    "sympy>=1.14.0",
    "testcontainers>=4.13.2",
    "tortoise-orm>=0.25.1",
    "typing-extensions>=4.15.0",
    "uvicorn[standard]>=0.37.0",
]

[dependency-groups]
dev = [
    "mypy==1.16.1",
    "pytest==8.4.1",
    "ruff==0.12.2",
]

[tool.uv]
environments = [
    "sys_platform != 'win32'",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    "alembic/", # database migrations
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",      # docstrings
    "TD003",  # todos issue links 
    "FIX002", # todos resolve
]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["S101"] # disable assert warning for test files

[tool.pytest.ini_options]
pythonpath = ["src"]
filterwarnings = [
    "ignore:^The @wait_container_is_ready decorator:DeprecationWarning" # eliminate testcontainer warning when running Pytest
]

[tool.alembic]

# path to migration scripts.
# this is typically a path given in POSIX (e.g. forward slashes)
# format, relative to the token %(here)s which refers to the location of this
# ini file
script_location = "%(here)s/alembic"

# template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
# Uncomment the line below if you want the files to be prepended with date and time
# see https://alembic.sqlalchemy.org/en/latest/tutorial.html#editing-the-ini-file
# for all available tokens
# file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s"

# additional paths to be prepended to sys.path. defaults to the current working directory.
prepend_sys_path = [
    "."
]

# timezone to use when rendering the date within the migration file
# as well as the filename.
# If specified, requires the python>=3.9 or backports.zoneinfo library and tzdata library.
# Any required deps can installed by adding `alembic[tz]` to the pip requirements
# string value is passed to ZoneInfo()
# leave blank for localtime
# timezone =

# max length of characters to apply to the "slug" field
# truncate_slug_length = 40

# set to 'true' to run the environment during
# the 'revision' command, regardless of autogenerate
# revision_environment = false

# set to 'true' to allow .pyc and .pyo files without
# a source .py file to be detected as revisions in the
# versions/ directory
# sourceless = false

# version location specification; This defaults
# to <script_location>/versions.  When using multiple version
# directories, initial revisions must be specified with --version-path.
# version_locations = [
#    "%(here)s/alembic/versions",
#    "%(here)s/foo/bar"
# ]


# set to 'true' to search source files recursively
# in each "version_locations" directory
# new in Alembic version 1.10
# recursive_version_locations = false

# the output encoding used when revision files
# are written from script.py.mako
# output_encoding = "utf-8"

# This section defines scripts or Python functions that are run
# on newly generated revision scripts.  See the documentation for further
# detail and examples
# [[tool.alembic.post_write_hooks]]
# format using "black" - use the console_scripts runner,
# against the "black" entrypoint
# name = "black"
# type = "console_scripts"
# entrypoint = "black"
# options = "-l 79 REVISION_SCRIPT_FILENAME"
#
# [[tool.alembic.post_write_hooks]]
# lint with attempts to fix using "ruff" - use the module runner, against the "ruff" module
# name = "ruff"
# type = "module"
# module = "ruff"
# options = "check --fix REVISION_SCRIPT_FILENAME"
#
# [[tool.alembic.post_write_hooks]]
# Alternatively, use the exec runner to execute a binary found on your PATH
# name = "ruff"
# type = "exec"
# executable = "ruff"
# options = "check --fix REVISION_SCRIPT_FILENAME"
